tests/invalid/unused_use.php
<?php

use Multi\Service as Svc;
use Multi\Client;

Svc\takesTwo(1);

